Created imageWithContentC REST API

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_image_with_content_c.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_image_with_content_c.default.yml
@@ -12,7 +12,6 @@ dependencies:
     - field.field.paragraph.block_image_with_content_c.field_styles
     - paragraphs.paragraphs_type.block_image_with_content_c
   module:
-    - entity_reference_revisions
     - paragraphs
     - text
 id: paragraph.block_image_with_content_c.default
@@ -29,29 +28,38 @@ content:
   field_background_image:
     weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_link:
     weight: 6
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_new_heading:
     weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
     weight: 4
