--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -24,6 +24,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_large_video
     - paragraphs.paragraphs_type.block_main_product_nav
     - paragraphs.paragraphs_type.block_map_tertiary
+    - paragraphs.paragraphs_type.block_multiple_images
     - paragraphs.paragraphs_type.block_persona_selector_banner
     - paragraphs.paragraphs_type.block_product_list
     - paragraphs.paragraphs_type.block_success_stories_a
@@ -110,8 +111,8 @@ settings:
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
-      blockfiltercontent: blockfiltercontent
       block_map_tertiary: block_map_tertiary
+      blockfiltercontent: blockfiltercontent
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_product_top: block_audience_product_top
@@ -132,6 +133,7 @@ settings:
       block_infographic: block_infographic
       block_large_video: block_large_video
       block_main_product_nav: block_main_product_nav
+      block_multiple_images: block_multiple_images
       block_persona_selector_banner: block_persona_selector_banner
       block_product_list: block_product_list
       block_success_stories_a: block_success_stories_a
@@ -141,8 +143,8 @@ settings:
       block_success_story_post: block_success_story_post
       block_target_audience: block_target_audience
       block_video_with_content_b: block_video_with_content_b
-      block_video_with_content_c: block_video_with_content_c
       block_triple_content: block_triple_content
+      block_video_with_content_c: block_video_with_content_c
     target_bundles_drag_drop:
       blockhowtoadvertise:
         enabled: true
@@ -261,10 +263,10 @@ settings:
       blocktext:
         enabled: true
         weight: 42
-      blockfiltercontent:
+      block_map_tertiary:
         enabled: true
         weight: 48
-      block_map_tertiary:
+      blockfiltercontent:
         enabled: true
         weight: 48
       block_video_with_call_to_actions:
@@ -279,10 +281,10 @@ settings:
       networkoverviewitem:
         weight: 82
         enabled: false
-      steppurchase:
+      program:
         weight: 84
         enabled: false
-      program:
+      steppurchase:
         weight: 84
         enabled: false
       map_tertiary_data:
@@ -361,8 +363,8 @@ settings:
         enabled: true
         weight: 118
       block_multiple_images:
+        enabled: true
         weight: 120
-        enabled: false
       block_pdf:
         weight: 121
         enabled: false
@@ -399,10 +401,10 @@ settings:
       block_video_with_content_b:
         enabled: true
         weight: 133
-      block_video_with_content_c:
+      block_triple_content:
         enabled: true
         weight: 134
-      block_triple_content:
+      block_video_with_content_c:
         enabled: true
         weight: 134
       channel:
@@ -411,10 +413,10 @@ settings:
       core_product_message_item:
         weight: 168
         enabled: false
-      device:
+      blog_post_item:
         weight: 169
         enabled: false
-      blog_post_item:
+      device:
         weight: 169
         enabled: false
       glossary_a_item:
@@ -432,7 +434,16 @@ settings:
       poster:
         weight: 178
         enabled: false
+      image_with_video_and_text:
+        weight: 180
+        enabled: false
+      skills:
+        weight: 189
+        enabled: false
       triple_content_item:
         weight: 196
+        enabled: false
+      text_and_link:
+        weight: 199
         enabled: false
 field_type: entity_reference_revisions
