--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -18,6 +18,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_glossary_b
     - paragraphs.paragraphs_type.block_hero_quaternary
     - paragraphs.paragraphs_type.block_hero_quinary
+    - paragraphs.paragraphs_type.block_image_list
     - paragraphs.paragraphs_type.block_image_with_content_b
     - paragraphs.paragraphs_type.block_image_with_content_c
     - paragraphs.paragraphs_type.block_infographic
@@ -86,16 +87,16 @@ settings:
       blockhowtoadvertise: blockhowtoadvertise
       blockimagecalltoactions: blockimagecalltoactions
       blockimagewithcontent: blockimagewithcontent
-      blockimagecarousel: blockimagecarousel
       blocklatest: blocklatest
+      blockimagecarousel: blockimagecarousel
       blockarticleteaser: blockarticleteaser
       blockaudiofragment: blockaudiofragment
       blockbutton: blockbutton
-      blockmore: blockmore
       blockblogpost: blockblogpost
+      blockmore: blockmore
       blockherosecondary: blockherosecondary
-      blockmap: blockmap
       blockheromain: blockheromain
+      blockmap: blockmap
       blockmapsecondary: blockmapsecondary
       blockmarketmap: blockmarketmap
       blocknetworkoverview: blocknetworkoverview
@@ -104,15 +105,15 @@ settings:
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockinfo: blockinfo
       blockquotesecondary: blockquotesecondary
+      blockinfo: blockinfo
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
-      block_map_tertiary: block_map_tertiary
       blockfiltercontent: blockfiltercontent
+      block_map_tertiary: block_map_tertiary
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_product_top: block_audience_product_top
@@ -134,6 +135,7 @@ settings:
       block_large_video: block_large_video
       block_main_product_nav: block_main_product_nav
       block_multiple_images: block_multiple_images
+      block_image_list: block_image_list
       block_persona_selector_banner: block_persona_selector_banner
       block_product_list: block_product_list
       block_success_stories_a: block_success_stories_a
@@ -143,8 +145,8 @@ settings:
       block_success_story_post: block_success_story_post
       block_target_audience: block_target_audience
       block_video_with_content_b: block_video_with_content_b
-      block_triple_content: block_triple_content
       block_video_with_content_c: block_video_with_content_c
+      block_triple_content: block_triple_content
     target_bundles_drag_drop:
       blockhowtoadvertise:
         enabled: true
@@ -167,21 +169,21 @@ settings:
       blockimagewithcontent:
         enabled: true
         weight: 12
-      blockimagecarousel:
+      blocklatest:
         enabled: true
         weight: 13
-      blocklatest:
+      blockimagecarousel:
         enabled: true
         weight: 13
       link:
         weight: 13
         enabled: false
-      step:
-        weight: 15
-        enabled: false
       blockarticleteaser:
         enabled: true
         weight: 15
+      step:
+        weight: 15
+        enabled: false
       blockaudiofragment:
         enabled: true
         weight: 16
@@ -191,19 +193,19 @@ settings:
       blockbutton:
         enabled: true
         weight: 18
-      blockmore:
+      blockblogpost:
         enabled: true
         weight: 19
-      blockblogpost:
+      blockmore:
         enabled: true
         weight: 19
       blockherosecondary:
         enabled: true
         weight: 23
-      blockmap:
+      blockheromain:
         enabled: true
         weight: 26
-      blockheromain:
+      blockmap:
         enabled: true
         weight: 26
       blockmapsecondary:
@@ -233,21 +235,21 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
       blocksmallheading:
         enabled: true
         weight: 37
-      blocksmallimage:
-        enabled: true
-        weight: 38
       slideheromain:
         weight: 38
         enabled: false
+      blocksmallimage:
+        enabled: true
+        weight: 38
       stat:
         weight: 39
         enabled: false
@@ -263,10 +265,10 @@ settings:
       blocktext:
         enabled: true
         weight: 42
-      block_map_tertiary:
+      blockfiltercontent:
         enabled: true
         weight: 48
-      blockfiltercontent:
+      block_map_tertiary:
         enabled: true
         weight: 48
       block_video_with_call_to_actions:
@@ -368,6 +370,9 @@ settings:
       block_pdf:
         weight: 121
         enabled: false
+      block_image_list:
+        enabled: true
+        weight: 121
       block_persona_selector_banner:
         enabled: true
         weight: 122
@@ -401,10 +406,10 @@ settings:
       block_video_with_content_b:
         enabled: true
         weight: 133
-      block_triple_content:
+      block_video_with_content_c:
         enabled: true
         weight: 134
-      block_video_with_content_c:
+      block_triple_content:
         enabled: true
         weight: 134
       channel:
@@ -439,6 +444,9 @@ settings:
         enabled: false
       skills:
         weight: 189
+        enabled: false
+      slide_item:
+        weight: 194
         enabled: false
       triple_content_item:
         weight: 196
