Created MainProductNav REST API

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_main_product_nav.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_main_product_nav.default.yml
@@ -10,7 +10,6 @@ dependencies:
     - field.field.paragraph.block_main_product_nav.field_styles
     - paragraphs.paragraphs_type.block_main_product_nav
   module:
-    - entity_reference_revisions
     - paragraphs
     - text
 id: paragraph.block_main_product_nav.default
@@ -21,11 +20,14 @@ content:
   field_new_heading:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
     weight: 3
