--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_statistics_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_statistics_b.default.yml
@@ -3,16 +3,74 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.block_audience_statistics_b.field_audience_statistics
+    - field.field.paragraph.block_audience_statistics_b.field_background_image
+    - field.field.paragraph.block_audience_statistics_b.field_cta
+    - field.field.paragraph.block_audience_statistics_b.field_new_heading
+    - field.field.paragraph.block_audience_statistics_b.field_paragraph
     - field.field.paragraph.block_audience_statistics_b.field_scroll_id
     - field.field.paragraph.block_audience_statistics_b.field_styles
     - paragraphs.paragraphs_type.block_audience_statistics_b
   module:
     - paragraphs
+    - text
 id: paragraph.block_audience_statistics_b.default
 targetEntityType: paragraph
 bundle: block_audience_statistics_b
 mode: default
 content:
+  field_audience_statistics:
+    type: entity_reference_paragraphs
+    weight: 5
+    settings:
+      title: Statistic
+      title_plural: Statistics
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: label_and_value
+    third_party_settings: {  }
+    region: content
+  field_background_image:
+    weight: 3
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
+    region: content
+  field_cta:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_new_heading:
+    weight: 2
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
+    region: content
+  field_paragraph:
+    weight: 4
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_scroll_id:
     type: string_textfield
     weight: 1
