--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - field.field.node.article.field_blocks
     - field.field.node.article.field_category
+    - field.field.node.article.field_company
     - field.field.node.article.field_content
     - field.field.node.article.field_document_type
     - field.field.node.article.field_excerpt
     - field.field.node.article.field_header_theme
     - field.field.node.article.field_image
+    - field.field.node.article.field_industry
     - field.field.node.article.field_links
     - field.field.node.article.field_market
     - field.field.node.article.field_platform
@@ -51,6 +53,8 @@ third_party_settings:
         - field_links
         - field_category
         - field_document_type
+        - field_company
+        - field_industry
         - field_market
         - field_platform
         - field_thought_leadership
@@ -113,6 +117,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
     region: content
+  field_company:
+    weight: 25
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_content:
     weight: 19
     settings:
@@ -152,6 +164,12 @@ content:
       progress_indicator: throbber
     third_party_settings: {  }
     region: content
+  field_industry:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_links:
     type: entity_reference_paragraphs
     weight: 22
@@ -165,7 +183,7 @@ content:
     third_party_settings: {  }
     region: content
   field_market:
-    weight: 25
+    weight: 27
     settings:
       match_operator: CONTAINS
       size: 60
@@ -174,7 +192,7 @@ content:
     type: entity_reference_autocomplete_tags
     region: content
   field_platform:
-    weight: 26
+    weight: 28
     settings:
       match_operator: CONTAINS
       size: 60
@@ -204,7 +222,7 @@ content:
     type: options_select
     region: content
   field_thought_leadership:
-    weight: 27
+    weight: 29
     settings:
       match_operator: CONTAINS
       size: 60
