--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.show.field_image
+    - field.field.node.show.field_show_background_image
     - field.field.node.show.field_show_description
     - field.field.node.show.field_show_genres
     - field.field.node.show.field_show_id
@@ -18,6 +19,7 @@ dependencies:
   module:
     - image
     - link
+    - paragraphs
     - path
 id: node.show.default
 targetEntityType: node
@@ -38,58 +40,27 @@ content:
     third_party_settings: {  }
     type: image_image
     region: content
+  field_show_background_image:
+    type: entity_reference_paragraphs
+    weight: 8
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_show_description:
     type: string_textarea
-    weight: 16
+    weight: 17
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_show_genres:
-    type: entity_reference_autocomplete
-    weight: 8
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_id:
-    type: string_textfield
-    weight: 14
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_links:
-    type: link_default
-    weight: 15
-    region: content
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-  field_show_media_type:
-    type: entity_reference_autocomplete
-    weight: 13
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_network:
-    type: entity_reference_autocomplete
-    weight: 11
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_recommend:
     type: entity_reference_autocomplete
     weight: 9
     region: content
@@ -98,7 +69,41 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_show_schedules:
+  field_show_id:
+    type: string_textfield
+    weight: 15
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_show_links:
+    type: link_default
+    weight: 16
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_show_media_type:
+    type: entity_reference_autocomplete
+    weight: 14
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_show_network:
+    type: entity_reference_autocomplete
+    weight: 12
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_show_recommend:
     type: entity_reference_autocomplete
     weight: 10
     region: content
@@ -107,9 +112,18 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_show_schedules:
+    type: entity_reference_autocomplete
+    weight: 11
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_show_videos:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 13
     region: content
     settings:
       match_operator: CONTAINS
