--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.show.field_image
+    - field.field.node.show.field_show_background_image
     - field.field.node.show.field_show_description
     - field.field.node.show.field_show_genres
     - field.field.node.show.field_show_id
@@ -15,6 +16,7 @@ dependencies:
     - field.field.node.show.field_show_videos
     - node.type.show
   module:
+    - entity_reference_revisions
     - image
     - link
     - user
@@ -31,6 +33,15 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_show_background_image:
+    type: entity_reference_revisions_entity_view
+    weight: 114
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_show_description:
     weight: 104
