--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -30,6 +30,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_multiple_images
     - paragraphs.paragraphs_type.block_persona_selector_banner
     - paragraphs.paragraphs_type.block_product_list
+    - paragraphs.paragraphs_type.block_show_detail
     - paragraphs.paragraphs_type.block_success_stories_a
     - paragraphs.paragraphs_type.block_success_stories_b
     - paragraphs.paragraphs_type.block_success_story_highlight
@@ -89,8 +90,8 @@ settings:
       blockhowtoadvertise: blockhowtoadvertise
       blockimagecalltoactions: blockimagecalltoactions
       blockimagewithcontent: blockimagewithcontent
-      blockimagecarousel: blockimagecarousel
       blocklatest: blocklatest
+      blockimagecarousel: blockimagecarousel
       blockarticleteaser: blockarticleteaser
       blockaudiofragment: blockaudiofragment
       blockbutton: blockbutton
@@ -107,15 +108,15 @@ settings:
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockquotesecondary: blockquotesecondary
       blockinfo: blockinfo
+      blockquotesecondary: blockquotesecondary
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
-      blockfiltercontent: blockfiltercontent
       block_map_tertiary: block_map_tertiary
+      blockfiltercontent: blockfiltercontent
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_product_top: block_audience_product_top
@@ -142,6 +143,7 @@ settings:
       block_image_list: block_image_list
       block_persona_selector_banner: block_persona_selector_banner
       block_product_list: block_product_list
+      block_show_detail: block_show_detail
       block_success_stories_a: block_success_stories_a
       block_success_stories_b: block_success_stories_b
       block_success_story_highlight: block_success_story_highlight
@@ -149,8 +151,8 @@ settings:
       block_success_story_post: block_success_story_post
       block_target_audience: block_target_audience
       block_video_with_content_b: block_video_with_content_b
-      block_triple_content: block_triple_content
       block_video_with_content_c: block_video_with_content_c
+      block_triple_content: block_triple_content
     target_bundles_drag_drop:
       blockhowtoadvertise:
         enabled: true
@@ -173,21 +175,21 @@ settings:
       blockimagewithcontent:
         enabled: true
         weight: 12
-      blockimagecarousel:
+      blocklatest:
         enabled: true
         weight: 13
       link:
         weight: 13
         enabled: false
-      blocklatest:
+      blockimagecarousel:
         enabled: true
         weight: 13
-      step:
-        weight: 15
-        enabled: false
       blockarticleteaser:
         enabled: true
         weight: 15
+      step:
+        weight: 15
+        enabled: false
       blockaudiofragment:
         enabled: true
         weight: 16
@@ -239,21 +241,21 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
       blocksmallheading:
         enabled: true
         weight: 37
-      blocksmallimage:
-        enabled: true
-        weight: 38
       slideheromain:
         weight: 38
         enabled: false
+      blocksmallimage:
+        enabled: true
+        weight: 38
       stat:
         weight: 39
         enabled: false
@@ -269,10 +271,10 @@ settings:
       blocktext:
         enabled: true
         weight: 42
-      blockfiltercontent:
+      block_map_tertiary:
         enabled: true
         weight: 48
-      block_map_tertiary:
+      blockfiltercontent:
         enabled: true
         weight: 48
       block_video_with_call_to_actions:
@@ -287,10 +289,10 @@ settings:
       networkoverviewitem:
         weight: 82
         enabled: false
-      program:
+      steppurchase:
         weight: 84
         enabled: false
-      steppurchase:
+      program:
         weight: 84
         enabled: false
       map_tertiary_data:
@@ -371,12 +373,12 @@ settings:
       block_multiple_images:
         enabled: true
         weight: 120
-      block_image_list:
-        enabled: true
-        weight: 121
       block_pdf:
         weight: 121
         enabled: false
+      block_image_list:
+        enabled: true
+        weight: 121
       block_persona_selector_banner:
         enabled: true
         weight: 122
@@ -384,8 +386,8 @@ settings:
         enabled: true
         weight: 123
       block_show_detail:
+        enabled: true
         weight: 124
-        enabled: false
       block_success_stories_a:
         enabled: true
         weight: 125
@@ -410,10 +412,10 @@ settings:
       block_video_with_content_b:
         enabled: true
         weight: 133
-      block_triple_content:
+      block_video_with_content_c:
         enabled: true
         weight: 134
-      block_video_with_content_c:
+      block_triple_content:
         enabled: true
         weight: 134
       channel:
@@ -422,10 +424,10 @@ settings:
       core_product_message_item:
         weight: 168
         enabled: false
-      device:
+      blog_post_item:
         weight: 169
         enabled: false
-      blog_post_item:
+      device:
         weight: 169
         enabled: false
       glossary_a_item:
