--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -37,6 +37,7 @@
     "mapbox-gl": "^0.41.0",
     "modernizr": "^3.3.1",
     "ncp": "^2.0.0",
+    "node-cmd": "^3.0.0",
     "normalize-wheel": "^1.0.1",
     "normalize.css": "^7.0.0",
     "object-fit-images": "^3.2.3",
