Created TwitterFeed REST API. Not finished

--- a/source/drupal/var/drupal-config/sync/config_split.config_split.ignore_config.yml
+++ b/source/drupal/var/drupal-config/sync/config_split.config_split.ignore_config.yml
@@ -9,6 +9,7 @@ module: {  }
 theme: {  }
 blacklist:
   - prerender.settings
+  - spectrum_twitter_api.settings
   - system.file
   - xmlsitemap.xmlsitemap.NXhscRe0440PFpI5dSznEVgmauL25KojD7u4e9aZwOM
 graylist:
