--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -38,6 +38,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_success_story_post
     - paragraphs.paragraphs_type.block_target_audience
     - paragraphs.paragraphs_type.block_triple_content
+    - paragraphs.paragraphs_type.block_twitter_feed
     - paragraphs.paragraphs_type.block_video_with_call_to_actions
     - paragraphs.paragraphs_type.block_video_with_content_b
     - paragraphs.paragraphs_type.block_video_with_content_c
@@ -150,6 +151,7 @@ settings:
       block_success_story_impact: block_success_story_impact
       block_success_story_post: block_success_story_post
       block_target_audience: block_target_audience
+      block_twitter_feed: block_twitter_feed
       block_video_with_content_b: block_video_with_content_b
       block_video_with_content_c: block_video_with_content_c
       block_triple_content: block_triple_content
@@ -407,8 +409,8 @@ settings:
         enabled: true
         weight: 130
       block_twitter_feed:
+        enabled: true
         weight: 131
-        enabled: false
       block_video_with_content_b:
         enabled: true
         weight: 133
