--- a/tools/ci/docker-compose.yml
+++ b/tools/ci/docker-compose.yml
@@ -5,3 +5,8 @@ services:
         image: spectrum/frontend
         volumes:
             - ../../:/app
+    backend:
+        image: wodby/drupal-php:7.1
+        command: sh
+        volumes:
+            - '../../source/drupal:/app'
