--- a/tools/ci/frontend/Dockerfile
+++ b/tools/ci/frontend/Dockerfile
@@ -3,12 +3,30 @@ FROM alpine:edge
 LABEL authors="MediaMonks jason@mediamonks.com"
 VOLUME /app
 
-RUN apk update
-RUN apk add yarn
-RUN apk add nodejs
-RUN apk add nodejs-npm
-RUN npm install typings --global
-RUN npm install cross-env --global
-RUN npm install -g vue-block-documentation
+RUN mkdir -p /usr/lib/node_modules/optipng-bin/
+
+RUN apk --update add \
+    yarn \
+    nodejs \
+    nodejs-npm \
+    make \
+    libpng \
+    libpng-dev \
+    autoconf \
+    automake \
+    zlib \
+    zlib-dev \
+    libpng \
+    libpng-dev \
+    ca-certificates \
+    openssl \
+    build-base \
+    g++ \
+    bash \
+    gifsicle
+
+RUN npm install -g typings \
+    vue-block-documentation
+
 WORKDIR /app
 RUN yarn
